feat(Cars): 입력받은 이름이 null이나 빈문자열이 있는지 검증하는 기능 구현